--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <meta name="keywords" content="treinamentos corporativos, workshop para empresas, desenvolvimento profissional, curso presencial, liderança, soft skills, AC Consultoria">
 <meta name="author" content="AC Consultoria">
 <meta name="robots" content="index, follow"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="AC-Consultoria.html" data-home-page-title="AC Consultoria" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+  <body data-home-page="AC-Consultoria.html" data-home-page-title="AC Consultoria" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1157" data-image-height="299">
           <img src="images/LogoACconsultoriaazul.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -69,6 +69,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
+        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/parceriaacsp.png" alt="" data-image-width="200" data-image-height="92">
       </div></header>
     <section class="u-clearfix u-white u-section-1" id="carousel_f528">
       <div class="u-container-style u-expanded-width u-group u-image u-image-1" data-image-width="1280" data-image-height="720">
@@ -156,7 +157,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-container-align-left u-image u-shading u-section-3" id="block-1" data-image-width="5638" data-image-height="3737">
+    <section class="u-align-left u-clearfix u-image u-shading u-section-3" id="block-1" data-image-width="5638" data-image-height="3737">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Investimento</h1>
         <p class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-custom-font u-font-montserrat u-large-text u-text u-text-variant u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">De R$ 450,00 por <span style="font-weight: 700;">R$ 340,00&nbsp;</span>no primeiro lote!<br>Para grupos acima de três pessoas,&nbsp;<span style="font-weight: 700;">R$ 290,00</span> cada!<br>Ingressos limitados!<br>
@@ -198,7 +199,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-                <div class="u-container-layout u-valign-bottom u-container-layout-1">
+                <div class="u-container-layout u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-1">
                   <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> Conheça o<br>Antônio Carlos (AC)
                   </h2>
                   <div class="u-expanded-width u-list u-list-1">
