--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-image u-section-2" id="sec-64be" data-image-width="1280" data-image-height="720">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">O que você vai aprender:</h1>
-        <h4 class="u-align-left u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"> •&nbsp;Liderança e Inteligência Emocional<br>• Soft Skills na Prática<br>• Liderança Emocional e Gestão de Conflitos<br>• Alta Performance<br>• Planejamento Estratégico, Metas e Foco <br>• Humanização das Relações
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Aprendizados nesse workshop</h1>
+        <h4 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"> •&nbsp;Liderança e inteligência emocional<br>• Soft skills na prática/vida pessoal e carreira profissional<br>• Liderança transformacional<br>• Alta performance e gestão: pessoas/conflitos<br>• Planejamento estratégico, metas e foco <br>• Humanização das relações/a importância de criar conexões
         </h4>
         <a href="https://api.whatsapp.com/send?phone=5511947574348&amp;text=Quero%20vaga%20no%20workshop!" class="u-active-black u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-border-active-white u-border-hover-white u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-hover-black u-palette-3-base u-radius-5 u-btn-1" target="_blank" data-animation-name="jackInTheBox" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">QUERO SABER MAIS </a>
-        <div class="u-carousel u-expanded-width u-gallery u-layout-thumbnails u-lightbox u-no-transition u-show-text-always u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-a109">
+        <div class="u-carousel u-expanded-width u-gallery u-layout-thumbnails u-lightbox u-no-transition u-show-text-always u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-6915">
           <div class="u-carousel-inner u-gallery-inner u-gallery-inner-1" role="listbox">
             <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="1280" data-image-height="720">
@@ -127,7 +127,7 @@
               <style data-mode="XS"></style>
             </div>
           </div>
-          <a class="u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-a109" role="button" data-u-slide="prev"><span aria-hidden="true">
+          <a class="u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-6915" role="button" data-u-slide="prev"><span aria-hidden="true">
               <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
 c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg></span><span class="sr-only">
@@ -135,7 +135,7 @@ c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,23
 c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg></span>
           </a>
-          <a class="u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-a109" role="button" data-u-slide="next"><span aria-hidden="true">
+          <a class="u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-6915" role="button" data-u-slide="next"><span aria-hidden="true">
               <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg></span><span class="sr-only">
@@ -144,20 +144,20 @@ L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.3
 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg></span>
           </a>
           <ol class="u-carousel-thumbnails u-spacing-10 u-carousel-thumbnails-1">
-            <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-a109" data-u-slide-to="0">
+            <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-6915" data-u-slide-to="0">
               <img class="u-carousel-thumbnail-image u-image" src="images/galeria1.png">
             </li>
-            <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-a109" data-u-slide-to="1">
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-6915" data-u-slide-to="1">
               <img class="u-carousel-thumbnail-image u-image" src="images/galeria2.png">
             </li>
-            <li class="u-carousel-thumbnail u-carousel-thumbnail-3" data-u-target="#carousel-a109" data-u-slide-to="2">
+            <li class="u-carousel-thumbnail u-carousel-thumbnail-3" data-u-target="#carousel-6915" data-u-slide-to="2">
               <img class="u-carousel-thumbnail-image u-image" src="images/intelbrastelman.png">
             </li>
           </ol>
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-image u-shading u-section-3" id="block-1" data-image-width="5638" data-image-height="3737">
+    <section class="u-align-left u-clearfix u-container-align-left u-image u-shading u-section-3" id="block-1" data-image-width="5638" data-image-height="3737">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Investimento</h1>
         <p class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-custom-font u-font-montserrat u-large-text u-text u-text-variant u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">De R$ 450,00 por <span style="font-weight: 700;">R$ 340,00&nbsp;</span>no primeiro lote!<br>Para grupos acima de três pessoas,&nbsp;<span style="font-weight: 700;">R$ 290,00</span> cada!<br>Ingressos limitados!<br>
@@ -371,5 +371,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
         </div>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80"> This <a href="https://nicepage.com/one-page-template">One Page Template</a> was created with Nicepage Builder 
+    </section>
   
 </body></html>
