--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="pt-BR"><head>
+     <!-- Google Tag Manager -->
+     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+     })(window,document,'script','dataLayer','GTM-5XDJ6P9M');</script>
+     <!-- End Google Tag Manager -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Pronto para transformar seu negócio?, Obtenha um ótimo trabalho dentro do seu orçamento, O que é uma empresa de consultoria e o que faz, Obtenha a solução certa&nbsp;para sua empresa, Juntos por um estilo de vida empresarial, Estratégias e Soluções, O que os clientes dizem">
@@ -42,7 +50,16 @@
 <meta name="keywords" content="treinamentos corporativos, workshop para empresas, desenvolvimento profissional, curso presencial, liderança, soft skills, AC Consultoria">
 <meta name="author" content="AC Consultoria">
 <meta name="robots" content="index, follow"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="AC-Consultoria.html" data-home-page-title="AC Consultoria" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body data-home-page="AC-Consultoria.html" data-home-page-title="AC Consultoria" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
+  
+    <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XDJ6P9M"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->  
+  
+  <header class="u-clearfix u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1157" data-image-height="299">
           <img src="images/LogoACconsultoriaazul.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -371,7 +388,5 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80"> This <a href="https://nicepage.com/one-page-template">One Page Template</a> was created with Nicepage Builder 
-    </section>
   
 </body></html>
