--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->  
   
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17353868704"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17353868704');
+</script>
+  
   <header class="u-clearfix u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1157" data-image-height="299">
           <img src="images/LogoACconsultoriaazul.png" class="u-logo-image u-logo-image-1">
