--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="pt-BR"><head>
+	
      <!-- Google Tag Manager -->
 <script>
 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -10,15 +11,6 @@ f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5XDJG9PM');
 </script>
 <!-- End Google Tag Manager -->
-
-<!-- Google Ads config dentro do GTM -->
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'AW-17353868704');
-</script>
-
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -62,14 +54,20 @@ f.parentNode.insertBefore(j,f);
 <meta name="keywords" content="treinamentos corporativos, workshop para empresas, desenvolvimento profissional, curso presencial, liderança, soft skills, AC Consultoria">
 <meta name="author" content="AC Consultoria">
 <meta name="robots" content="index, follow"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="AC-Consultoria.html" data-home-page-title="AC Consultoria" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
-  
-    <!-- Google Tag Manager (noscript) -->
+<body data-home-page="AC-Consultoria.html" 
+      data-home-page-title="AC Consultoria" 
+      data-path-to-root="./" 
+      data-include-products="false" 
+      class="u-body u-xl-mode" 
+      data-lang="pt">
+
+  <!-- Google Tag Manager (noscript) -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XDJ6P9M"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
-  <!-- End Google Tag Manager (noscript) -->  
+  <!-- End Google Tag Manager (noscript) -->
+
   
   <header class="u-clearfix u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1157" data-image-height="299">
